--- a/Tests/NIntercept.Tests/NIntercept.Tests.csproj
+++ b/Tests/NIntercept.Tests/NIntercept.Tests.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Unity" Version="5.11.7" />
   </ItemGroup>
 
