--- a/Samples/CodeGenerationSample/CodeGenerationSample.csproj
+++ b/Samples/CodeGenerationSample/CodeGenerationSample.csproj
@@ -70,7 +70,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Features\CleanProxyMethodBuilder.cs" />
+    <Compile Include="Features\CleanPropertyProxyMethodBuilder.cs" />
     <Compile Include="Features\DelegateCommandBuilderFeature.cs" />
     <Compile Include="Features\NotifyPropertyChangedFeature.cs" />
     <Compile Include="Features\ViewModelAdditionalCode.cs" />
