--- a/Tests/NIntercept.Tests/NIntercept.Tests.csproj
+++ b/Tests/NIntercept.Tests/NIntercept.Tests.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\..\Source\NIntercept\NIntercept.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Internals\" />
+  </ItemGroup>
+
 </Project>
